<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataTrackerClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_datatracker">Datatracker</string>
    <string name="signUpText">Sign Up</string>
    <string name="enterText">Enter</string>
    <string name="phoneNumberText">Phone Number</string>
    <string name="passwordText">Password (Account Admin Only)</string>
    <string name="appNamePretty">Data Tracker</string>
    <string name="adminSelection">Admin</string>
    <string name="accountMemberSelection">User</string>
    <string name="title_signup">Sign-up</string>
    <string name="billing_text">Billing Cycle:</string>
    <string name="device_datausage_text">Device Data Usage:</string>
    <string name="add_text">Add Devices</string>
    <string name="signup_password">Password: </string>
    <string name="email_text">Email Id: </string>
    <string name="register_button">REGISTER</string>
    <string name="delete_text">Delete Devices</string>
    <string name="cycle_text">Billing Cycle:</string>
    <string name="select_hint">Select</string>
    <string name="setcycle">Set (Day of the Month)</string>
    <string name="setquota">Quota:</string>
    <string name="threshold_limit">Threshold Limit:</string>
    <string name="accountSettingsText">Account Settings</string>
    <string name="saveSettingsText">Save</string>
    <string name="revertSettingsText">Revert</string>
    <string name="accountPhoneNumberText">Account Phone #:</string>
    <string name="quotaText">Monthly Quota:</string>
    <string name="thresholdText">Warning Threshold:</string><string name="devicePhoneNumberText">Device Phone #:</string>
    <string name="deviceSettingsText">User Settings</string>
    <string name="logoutText">Logout</string>
    <string name="billingCycleText">Billing Cycle Start:</string>
    <string name="autoTurnOff">Enforce Quota Limit</string>
    <string name="removeDeviceText">Remove Device</string>
    <string name="account_datausage_text">Account Data Usage:</string>
</resources>
