<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center_horizontal"
	android:orientation="vertical">

	<TextView
		android:id="@+id/accountSettingsLabel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:text="@string/accountSettingsText"
		android:textSize="40sp" />
		
	<!-- Save/Revert settings -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">

		<Button
			android:id="@+id/saveSettingsButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:text="@string/saveSettingsText" />

		<Button
			android:id="@+id/revertSettingsButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/revertSettingsText" />

		<Button
			android:id="@+id/logoutButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:text="@string/logoutText" />
		
	</LinearLayout>	

	<!-- Account Phone Number Display -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/accountPhoneNumberLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="40dp"
			android:text="@string/accountPhoneNumberText"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/accountPhoneNumber"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="40dp"
			android:textSize="20sp" />
	</LinearLayout>

	<!-- Quota Display -->	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/quotaLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/quotaText"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/quotaDisplay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:textSize="20sp" />
	</LinearLayout>	

	<!-- Quota Manipulation -->	
	<SeekBar
		android:id="@+id/quotaSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp" />


	<!-- Threshold Display -->	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/thresholdLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/thresholdText"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/thresholdDisplay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:textSize="20sp" />
	</LinearLayout>	

	<!-- Threshold Manipulation -->	
	<SeekBar
		android:id="@+id/thresholdSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp" />
	
	
	<!-- Billing Cycle Display/Manipulation -->	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/billingCycleLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="10dp"
			android:text="@string/billingCycleText"
			android:textSize="20sp" />

		<NumberPicker
			android:id="@+id/billingCyclePicker"
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="10dp"
			android:orientation="horizontal"
			android:textSize="20sp" />
	</LinearLayout>
	

	<!-- Devices List -->	
	<TextView
		android:id="@+id/deviceSettingsLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="40dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:text="@string/deviceSettingsText"
		android:textSize="40sp" />
	
	<LinearLayout
		android:id="@+id/devices"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center_horizontal"
		android:orientation="vertical" />

</LinearLayout>