<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<!-- Device Phone Number Display -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/devicePhoneNumberLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"
			android:text="@string/devicePhoneNumberText"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/devicePhoneNumber"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"
			android:textSize="20sp" />
	</LinearLayout>

	<!-- Quota Display -->	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/quotaLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/quotaText"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/quotaDisplay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:textSize="20sp" />
	</LinearLayout>	

	<!-- Quota Manipulation -->	
	<SeekBar
		android:id="@+id/quotaSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp" />


	<!-- Threshold Display -->	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/thresholdLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/thresholdText"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/thresholdDisplay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:textSize="20sp" />
	</LinearLayout>	

	<!-- Threshold Manipulation -->	
	<SeekBar
		android:id="@+id/thresholdSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp" />


	<!-- Auto Turn-off Checkbox -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/autoTurnOffLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:text="@string/autoTurnOff"
			android:textSize="20sp" />

		<CheckBox
			android:id="@+id/autoTurnOff"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:textSize="20sp" />
	</LinearLayout>
	
	
	<Button
		android:id="@+id/removeDeviceButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:text="@string/removeDeviceText" />

</LinearLayout>
